Fri Oct 27 13:43:35 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * save-cwd.c: use __PROTO instead of __P (see below).

        * getline.h (__PROTO): same as below.

        * save-cwd.h (__PROTO): replaces __P.  New name, so don't ask if
        already defined.  The conflict was that OS/2 w/ IBM C/C++ uses
        `__P' for something else, in <ctype.h> of all places.

        * system.h: do nothing about alloca ifdef ALLOCA_IN_STDLIB (see
        ../src/ChangeLog).

Tue Oct 24 13:01:25 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* wait.h: include sys/resource.h if available. This is needed at
	  least under AIX-3.2 where <sys/wait.h> doesn't include it.

Mon Oct 23 17:39:11 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* valloc.c (valloc): change parameter definition

Sun Oct 22 14:15:44 1995  Jim Meyering  (meyering@comco.com)

	* getline.c, getline.h: New files.
	* Makefile.in (SOURCES, OBJECTS, HEADERS): Add getline.c, getline.o,
	and getline.h, respectively.

Tue Oct 10 18:01:50 1995  Karl Fogel  <kfogel@totoro.cyclic.com>

        * Makefile.in (cvs_srcdir): define cvs_srcdir to be ../src, then
        include it with -I so save_cwd.c can find error.h (for example).

Sun Oct  8 12:27:57 1995  Peter Wemm  <peter@haywire.DIALix.COM>

	* system.h: define POSIX_SIGNALS or BSD_SIGNALS if configure has
	located all the necessary functions for each "type".
	* sighandle.c: detect/use POSIX/BSD reliable signals (especially
	for blocking signals in critical sections).  Helps prevent stray
	locks on interruption.

Mon Oct  2 18:11:23 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* system.h: Doc fix.

Mon Oct  2 18:10:35 1995  Larry Jones  <larry.jones@sdrc.com>

	* regex.c: compile 4.2 BSD compatible functions even when
	_POSIX_SOURCE is defined since we need them and we wouldn't be
	compiling this file unless they don't exist.

Mon Oct  2 10:32:20 1995  Michael Finken  <finken@conware.de>

        * strstr.c (strstr): new file and func.
